// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`snyk-api-import orgs:data <...>\` Generates orgs data as expected 1`] = `"Found 9 org(s). Written the data to file: group-hello-github-com-orgs.json"`;

exports[`\`snyk-api-import orgs:data <...>\` Shows error when missing groupId 1`] = `
[Error: Command failed: node ./dist/index.js orgs:data --source=github
index.js orgs:data

Generate data required for Orgs to be created via API by mirroring a given
source.


Options:
  --version            Show version number                             [boolean]
  --help               Show help                                       [boolean]
  --sourceOrgPublicId  Public id of the org in Snyk that can be used as a
                       template to copy all supported org settings.
  --groupId            Public id of the group in Snyk (available on group
                       settings)                                      [required]
  --sourceUrl          Custom base url for the source API that can list
                       organizations (e.g. Github Enterprise url)
  --source             The source of the targets to be imported e.g. Github,
                       Github Enterprise
         [required] [choices: "github", "github-enterprise"] [default: "github"]

Missing required argument: groupId
]
`;

exports[`\`snyk-api-import orgs:data <...>\` Shows help text as expected 1`] = `
"index.js orgs:data

Generate data required for Orgs to be created via API by mirroring a given
source.


Options:
  --version            Show version number                             [boolean]
  --help               Show help                                       [boolean]
  --sourceOrgPublicId  Public id of the org in Snyk that can be used as a
                       template to copy all supported org settings.
  --groupId            Public id of the group in Snyk (available on group
                       settings)                                      [required]
  --sourceUrl          Custom base url for the source API that can list
                       organizations (e.g. Github Enterprise url)
  --source             The source of the targets to be imported e.g. Github,
                       Github Enterprise
         [required] [choices: \\"github\\", \\"github-enterprise\\"] [default: \\"github\\"]"
`;
